	  India). Removed extra "bindi" from 'P' key-position.
	- Updated klavaro.appdata.xml file, e.g. added the kudo ModernToolkit.
	- Added GenericName in klavaro.desktop file.
	- Resource leak at translation.c (fh obtained with fopen but had no fclose).
	- Default keyboard for Finnish is [qwerty_se], not [querty_se].
	- Blinking cursor GSource timeout error.
	* Changed:
	- Max number of customizable basic lessons increased to 256.
	- ar.paragraphs updated with some quotes, no more religious or
	  political texts.
	- Allowing the tutor window to shrink more.
	- Using Gurmukhi script to show Punjabi (pa) option in "Language" at main menu
	  window.
	* Added translations:
	= Korean support.
	- Serbian.
	* Updated translations:
	- Arabic.
	- French.

2016-03-17  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.02
	* Fixed:
	- Using portable GTK function to access Klavaros's Top 10 URL.
	* Changed:
	- pa.paragraphs updated.
	* Added translations:
	- Catalan.
	- Croatian.
	* Updated translations:
	- Swedish.
	- Polish.
	- Czech.
	- Italian.
	- Galician.
	- French.
	- Finnish completed: words and paragraphs added.

2014-09-10  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.01
	* Added:
	- Gurmukhi Jhelum keyboard for Punjabi language (normal and shifted).
	- AppData file, with description and screenshot links for software
	centers.
	- AppIcons with resolutions 64x64 and 96x96.
	* Fixed:
	- Punjabi characters now are managed correctly.
	- Maybe the annoying wrapping bug has also been fixed (Hallelujah!).
	- Layout querty_ca_quebec.kbd not presenting isolated acute anymore,
	using now the letter "é".
	- Reactivated the spin button to select the basic lesson on progress
	charts.
	- Return of value -1 for pointer in gtk_databox_get_graphs(), now
	returning NULL.
	- Windows issue when selecting default language (e.g. with en_IN).
	- Now the internal GtkDatabox library has its name moved to
	"gtkdataboks", to avoid conflicting with the upstream library.
	* Changed: