@@ -694,12 +694,12 @@
                         <property name="icon_size">1</property>
                       </object>
                     </child>
-                    <accelerator key="r" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                     <accelerator key="R" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                    <accelerator key="r" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                   </object>
                 </child>
-                <accelerator key="R" signal="grab_focus" modifiers="GDK_CONTROL_MASK"/>
                 <accelerator key="r" signal="grab_focus" modifiers="GDK_CONTROL_MASK"/>
+                <accelerator key="R" signal="grab_focus" modifiers="GDK_CONTROL_MASK"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -2529,8 +2529,8 @@
                     </child>
                   </object>
                 </child>
-                <accelerator key="Left" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
                 <accelerator key="Left" signal="clicked"/>
+                <accelerator key="Left" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -2588,8 +2588,8 @@
                     </child>
                   </object>
                 </child>
-                <accelerator key="Right" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
                 <accelerator key="Right" signal="clicked"/>
+                <accelerator key="Right" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -3563,7 +3563,8 @@
     <property name="website">http://klavaro.sourceforge.net/</property>
     <property name="website_label">klavaro.sf.net</property>
     <property name="authors">- Felipe Castro - &lt;fefcas@gmail.com&gt;
-- Petr Machata</property>
+- Petr Machata
+- Hodong Kim</property>
     <property name="documenters">- Felipe Castro</property>
     <property name="translator_credits">- &lt;a href="http://translationproject.org/domain/klavaro.html"&gt;The Translation Project&lt;/a&gt;
 - Ankur ICT Developement Foundation, Bangladesh.
